--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  padding: 0 150px;
+  height: 100%;
+}
