--- a/src/index.css
+++ b/src/index.css
@@ -3,27 +3,36 @@
 @tailwind utilities;
 
 
-
-.container {
-  max-width: 1440px;
-  width: 100%;
-  padding: 0 150px;
-  height: 100%;
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #E5E5E5;
 }
 
+.container {
+    max-width: 1440px;
+    width: 100%;
+    padding: 0 150px;
+    height: 100%;
+}
 
 /* BUTTON */
 
-
-.btn-primary{
-  background-color: #5E50A1;
-  color: #FFFFFF;
-  border-radius: 4px;
+.btn-primary {
+    background-color: #5E50A1;
+    color: #FFFFFF;
+    border-radius: 4px;
 }
 
-.btn-secondary{
-  background-color: #FBB01799;
-  color: #FFFFFF;
-  border-radius: 4px;
-  border: 2px solid #FBB017 ;
+.btn-secondary {
+    background-color: #FBB01799;
+    color: #FFFFFF;
+    border-radius: 4px;
+    border: 2px solid #FBB017;
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        padding: 0 16px;
+    }
 }
