--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,8 @@ body{
         padding: 0 16px;
     }
 }
+@media only screen and (max-width: 820px) {
+    .container {
+        padding: 0 16px;
+    }
+}
