--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: #e5e5e5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  max-width: 1440px;
+  width: 100%;
+  padding: 0 150px;
+  height: 100%;
+}
+
+/* BUTTON */
+
+.btn-primary {
+  background-color: #5e50a1;
+  color: #ffffff;
+  border-radius: 4px;
+}
+
+.btn-secondary {
+  background-color: #fbb01799;
+  color: #ffffff;
+  border-radius: 4px;
+  border: 2px solid #fbb017;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .container {
+    padding: 0 16px;
+  }
 }
